setup/kubernetes/redisCommander-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: rediscommander
  name: rediscommander
spec:
  containers:
  - args:
    - --redis-host
    - redis
    image: tenstartups/redis-commander
    name: rediscommander
    imagePullPolicy: Always
    ports:
    - containerPort: 8081
    resources: {}
  restartPolicy: OnFailure
status: {}
