setup/kubernetes/admin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: admin
  name: admin
spec:
  containers:
  - image: localhost:5000/admin
    name: admin
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    - containerPort: 11111
    resources:
      limits:
        memory: 450Mi
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  ports:
  - protocol: TCP
    port: 8080
    name: api
  - protocol: TCP
    port: 11111
    name: actuator
