setup/kubernetes/configserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: configserver
  name: configserver
spec:
  containers:
  - image: localhost:5000/configserver
    name: configserver
    ports:
    - containerPort: 8888
    - containerPort: 11111
    imagePullPolicy: Always
    resources:
      limits:
        memory: 350Mi
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: configserver
spec:
  selector:
    app: configserver
  ports:
  - protocol: TCP
    port: 8888
    name: api
  - protocol: TCP
    port: 11111
    name: actuator
