setup/kubernetes/kubernetes-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-nodeport
  namespace: kube-system
spec:
  selector:
    k8s-app: kubernetes-dashboard
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
    nodePort: 31234
  sessionAffinity: None
  type: NodePort
