setup/kubernetes/mysqlbm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mysqlbm
  name: mysqlbm
spec:
  containers:
  - image: mysql:8.0
    name: mysqlbm
    imagePullPolicy: Always
    ports:
    - containerPort: 3306
    resources: {}
  restartPolicy: OnFailure

---
kind: Service
apiVersion: v1
metadata:
  name: mysqlbm
spec:
  selector:
    app: mysqlbm
  ports:
  - protocol: TCP
    port: 3306
    name: api
