setup/kubernetes/mysqlra-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mysqlra
  name: mysqlra
spec:
  containers:
  - image: mysql:8.0
    name: mysqlra
    imagePullPolicy: Always
    ports:
    - containerPort: 3306
    resources: {}
  restartPolicy: OnFailure
status: {}
---
kind: Service
apiVersion: v1
metadata:
  name: mysqlra
spec:
  selector:
    app: mysqlra
  ports:
  - protocol: TCP
    port: 3306
    name: api
