setup/kubernetes/mysqlus-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mysqlus
  name: mysqlus
spec:
  containers:
  - image: mysql:8.0
    name: mysqlus
    imagePullPolicy: Always
    ports:
    - containerPort: 3306
    resources: {}
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: mysqlus
spec:
  selector:
    app: mysqlus
  ports:
  - protocol: TCP
    port: 3306
    name: api
