setup/kubernetes/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
spec:
  containers:
  - image: redis:alpine
    name: redis
    imagePullPolicy: Always
    ports:
    - containerPort: 6379
    resources: {}
  restartPolicy: OnFailure
status: {}
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    name: api
