setup/kubernetes/reverseproxy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: reverseproxy
  name: reverseproxy
spec:
  containers:
  - image: localhost:5000/reverseproxy
    name: users
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    - containerPort: 11111
    resources:
      limits:
        memory: 450Mi
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: reverseproxy-service
spec:
  selector:
    app: reverseproxy
  ports:
  - protocol: TCP
    port: 8080
    name: api
  - protocol: TCP
    port: 11111
    name: actuator
