setup/kubernetes/users-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: users
  name: users
spec:
  containers:
  - image: localhost:5000/users
    name: users
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    - containerPort: 11111
    resources:
      limits:
        memory: 550Mi
  restartPolicy: OnFailure
---
kind: Service
apiVersion: v1
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
  - protocol: TCP
    port: 8080
    name: api
  - protocol: TCP
    port: 11111
    name: actuator
